Fixed Google Login

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=eZ4gOQHWW2pUWw28csYUaEGDZvsn8hHyZKtfmxtA5FU=
 GOOGLE_ID=1039963679378-lp9njv3adkf89jldvql34ts968pcvdr4.apps.googleusercontent.com
 GOOGLE_SECRET=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
