--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^4.1.0",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.7",
     "next": "10.2.0",
     "next-auth": "^3.19.6",
+    "prisma": "^4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "prisma": {
+    "schema": "./src/db/schema.prisma"
   }
 }
