--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "login-tutorial",
-  "version": "0.1.0",
+  "name": "notes",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^4.1.0",
-    "mongodb": "^3.6.6",
-    "mongoose": "^5.12.7",
-    "next": "10.2.0",
-    "next-auth": "^3.19.6",
-    "prisma": "^4.1.0",
+    "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
-  "prisma": {
-    "schema": "./src/db/schema.prisma"
+  "devDependencies": {
+    "@types/node": "17.0.12",
+    "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
+    "postcss": "^8.4.5",
+    "prisma": "^4.1.0",
+    "tailwindcss": "^3.0.16",
+    "typescript": "4.5.5"
   }
 }
