--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.0",
     "next": "12.0.8",
     "next-auth": "^4.10.2",
@@ -15,8 +16,6 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/node": "17.0.12",
-    "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
