--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "admin-frontend-next",
-  "version": "0.1.0",
+  "name": "notes",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,17 +10,20 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
-    "@tailwindcss/forms": "^0.5.2",
-    "next": "12.2.3",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.1.0",
+    "next": "12.0.8",
     "next-auth": "^4.10.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.6"
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
+    "postcss": "^8.4.5",
+    "prisma": "^4.1.0",
+    "tailwindcss": "^3.0.16",
+    "typescript": "4.5.5"
   }
 }
