--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "prisma": "^4.1.0",
     "tailwindcss": "^3.0.16",
     "typescript": "4.5.5"
+  },
+  "prisma": {
+    "schema": "./src/prisma/schema.prisma"
   }
 }
