--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
+    "prettier": "2.7.1",
     "prisma": "^4.1.0",
     "tailwindcss": "^3.0.16",
     "typescript": "4.5.5"
