--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.0",
+    "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
     "next": "12.0.8",
     "next-auth": "^4.10.2",
