--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^4.1.0",
     "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "next": "12.0.8",
     "next-auth": "^4.10.2",
     "react": "17.0.2",
