--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
@@ -13,6 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.0",
     "cors": "^2.8.5",
+    "husky": "^8.0.1",
     "next": "12.0.8",
     "next-auth": "^4.10.2",
     "react": "17.0.2",
@@ -26,7 +28,8 @@
     "prettier": "2.7.1",
     "prisma": "^4.1.0",
     "tailwindcss": "^3.0.16",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "husky": "^8.0.0"
   },
   "prisma": {
     "schema": "./src/prisma/schema.prisma"
