--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.4",
@@ -24,12 +26,12 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "husky": "^8.0.0",
     "postcss": "^8.4.5",
     "prettier": "2.7.1",
     "prisma": "^4.1.0",
     "tailwindcss": "^3.0.16",
-    "typescript": "4.5.5",
-    "husky": "^8.0.0"
+    "typescript": "4.5.5"
   },
   "prisma": {
     "schema": "./src/prisma/schema.prisma"
