--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.0",
+    "cors": "^2.8.5",
+    "husky": "^8.0.1",
     "next": "12.0.8",
     "next-auth": "^4.10.2",
     "react": "17.0.2",
@@ -21,6 +26,7 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
+    "husky": "^8.0.0",
     "postcss": "^8.4.5",
     "prettier": "2.7.1",
     "prisma": "^4.1.0",
