--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.1.0",
+    "antd": "^4.22.8",
     "cloudinary": "^1.30.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
