feat(collections): add user collection

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "~/components": ["src/components/index.js"],
-      "~/collections": ["src/components/index.js"],
+      "~/collections": ["src/collections/index.js"],
       "~/prisma": ["src/prisma/prisma.js"],
     }
   }
