chore: rename Cloudinary env var

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,12 @@ GOOGLE_SECRET="console.cloud.google.com > APIS and services > Credentials > OAut
 # using your USERNAME, PASSWORD and DATABASE_NAME you want to use
 DATABASE_URL="SOMETHING LIKE: mongodb+srv://USERNAME:PASSWORD@link.link.link/DATABASE_NAME?retryWrites=true&w=majority"
 
-NEXTAUTH_SECRET="" # generate a secret using: openssl rand -base64 32
-NEXTAUTH_URL="" # if running locally: http://localhost:3000
+# generate a secret using: openssl rand -base64 32
+NEXTAUTH_SECRET=""
+# if running locally: http://localhost:3000
+NEXTAUTH_URL=""
+
+# Cloudinary.com settings
+CLOUDINARY_CLOUD_NAME=""
+CLOUDINARY_API_KEY=""
+CLOUDINARY_API_SECRET=""
