--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^16.0.1",
     "next": "12.0.8",
     "next-auth": "^4.10.2",
+    "pusher": "^5.1.1-beta",
+    "pusher-js": "^7.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
