--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ CLOUDINARY_CLOUD_NAME=""
 CLOUDINARY_API_KEY=""
 CLOUDINARY_API_SECRET=""
 CLOUDINARY_UPLOAD_PRESET=""
+
+NEXT_PUBLIC_PUSHER_APP_ID = ""
+NEXT_PUBLIC_PUSHER_APP_KEY = ""
+NEXT_PUBLIC_PUSHER_APP_SECRET = ""
+NEXT_PUBLIC_PUSHER_APP_CLUSTER = ""
