--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "next": "12.0.8",
+    "next-absolute-url": "^1.2.2",
     "next-auth": "^4.10.2",
     "pusher": "^5.1.1-beta",
     "pusher-js": "^7.4.0",
